@@ -4,6 +4,7 @@
 	that I won't forget updating it anymore (it was wrong in 1.10).
 
 	* gentoo-syntax.el: Update version number and copyright years.
+	(ebuild-mode-menu): Define variable to avoid a compiler warning.
 
 2009-01-04  Christian Faulhammer  <fauli@gentoo.org>
 
